micronaut upgrade 4 and  drop jackson support :(